# knowing

./: .gitignore  .goreleaser.yaml  .goreleaser.yml  .mcp.json  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  coverage.out  e2e_test.go  glama.json  go.mod  go.sum  install.sh  knowing.db-shm  knowing.db-wal  mkdocs.yml  runtime-proof.json  server.json  smithery.yaml  static-proof.json
.polywave-state/: active-impl  gate-cache.json
animations/: package-lock.json  package.json  vite.config.ts
bench/: AGENT-EFFICIENCY-STUDY.md  CONTEXT-PACKING-STUDY.md  EVALUATION-OVERVIEW.md  README.md
docker/: Dockerfile
docs/: CHANGELOG.md  CLI.md  CODE_QUALITY_AUDIT.md  CONTEXT.md  DISTRIBUTION.md  FEATURES.md  MCP-TOOLS.md  REQUIREMENTS.md  architecture.md  competitive-analysis.md  context-packing.md  edge-types.md  equivalence-classes.md  eval-framework.md  gcf-paper.md  hooks-integration.md  implementation-log.md  index.md  mcp-assert-false-positives.md  retrieval-pipeline.md  roadmap.md  runtime-traces.md  wire-formats.md
eval/: CROSS_REPO_FINDINGS.md  EXPERIMENTS.md  FINDINGS.md  README.md  crossrepo_test.go  eval_test.go  format_comprehension_test.go  format_llm_comprehension_test.go  verify_test.go
hooks/: FINDINGS.md  README.md  analyze-hooks  knowing-post-task  knowing-pre-compact  knowing-pre-edit  knowing-session-start  knowing-subagent
pypi/: README.md  pyproject.toml
pypi/knowing/: __init__.py  __main__.py
scripts/: backtest-known-attacks.sh  check-isolation-score.sh  false-positive-eval.sh  fetch-npm-recent-changes.sh  fetch-recent-publishes.sh  (+4 more)
(+1317 files in other folders)
