[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "knowing"
version = "0.1.0"
description = "Content-addressed knowledge graph for software systems"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
keywords = ["mcp", "knowledge-graph", "code-intelligence", "content-addressed", "software-relationships", "ai-agents", "static-analysis", "opentelemetry"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/blackwell-systems/knowing"
Documentation = "https://blackwell-systems.github.io/knowing"
Repository = "https://github.com/blackwell-systems/knowing"

[project.scripts]
knowing = "knowing.__main__:main"

[tool.setuptools.packages.find]
include = ["knowing*"]
